--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,42 +6,20 @@
 
 body {
   position: relative;
-  color: white;
-  height: 100vh;
-  background-color: #232c39;
-  background-image: linear-gradient(
-    45deg,
-    rgba(0, 216, 255, 0.5) 10%,
-    rgba(0, 1, 127, 0.7)
-  );
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
-  overflow-y: hidden;
-}
-
-h2 {
   margin: 0;
-  font-size: 2.25rem;
-  font-weight: bold;
-  letter-spacing: -0.025em;
-  color: #fff;
+  height: 100vh;
+  overflow-y: hidden;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: transparent;
+  padding: 0;
+  border-radius: 10px;
+  -webkit-font-smoothing: antialiased;
 }
 
-p {
-  font-size: 24px;
+h1, h2, h3, h4, h5 {
+  margin: 0px;
 }
 
-li {
-  list-style: none;
-}
-
-a {
-  color: white;
-  opacity: 0.75;
-  text-decoration: none;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-  cursor: pointer;
+h1, h2, h3, h4, h5, h6, p, span {
+  -webkit-user-select: none;
 }
